--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1985,7 +1985,7 @@ h3.feature-namber {
     font-weight: 400;
     position: relative;
     z-index: 1;
-    background: #FF5E14;
+    background: #0c9ed9;
 }
 
 .portfolio_nav ul li:hover {
