--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3548,7 +3548,7 @@ input.src-input-box::placeholder {
     background: transparent;
     text-align: center;
     font-size: 24px;
-    color: #FF5E14;
+    color: #0c9ed9;
     padding: 0;
     cursor: pointer;
     -webkit-transition: all 500ms ease;
