--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3645,7 +3645,7 @@ button.close-search i {
 
 span.flaticon-multiply i {
     display: inline-block;
-    color: #FF5E14;
+    color: #0c9ed9;
 }
 
 .header-search-button i {
