--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ Tags: consulting, finance, corporate, business, consultant, multipurpose, techno
 ================================================*/
 
 .top-bar-area {
-    background-color: #0a1027;
+    background-color: #0c9ed9;
     padding: 24px 0 36px;
     position: relative;
     z-index: 1;
