--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ Tags: consulting, finance, corporate, business, consultant, multipurpose, techno
 
 .top-bar-info ul li i {
     display: inline-block;
-    color: #fff;
+    color: #012549;
     font-size: 16px;
     margin-right: 9px;
 }
