--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3627,7 +3627,7 @@ span.flaticon-multiply i {
 }
 
 .header-search-button.search-box-outer a {
-    color: #062462;
+    color: #fff;
     display: inline-block;
     position: relative;
     left: 16px;
