--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 18px;
+    line-height: 1.35;
     color: #000;
     font-weight: 400;
     text-align: left;
