--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -18,9 +18,7 @@ body {
 }
 
 p {
-    font-size: 16px;
-    line-height: 24px;
-    color: #000;
+    line-height: 2;
     font-weight: 400;
     font-family: 'Muli', sans-serif;
 }
