--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2005,7 +2005,7 @@ h3.feature-namber {
 }
 
 .product-detials-area {
-    padding: 120px 0 84px;
+    padding: 80px 0 44px;
 }
 
 .product-page-title h1 {
@@ -2206,7 +2206,7 @@ ul.product-details-list li i {
     content: "";
     height: 100%;
     width: 0%;
-    background: #FF5E15;
+    background: #0c9ed9;
     left: 0;
     top: 0;
     z-index: -1;
@@ -2234,7 +2234,7 @@ ul.product-details-list li i {
     float: right;
     font-size: 16px;
     margin-top: 0px;
-    color: #FF5E15;
+    color: #0c9ed9;
     transition: .5s;
     font-weight: 600;
 }
