--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ Tags: consulting, finance, corporate, business, consultant, multipurpose, techno
     width: 100%;
     -webkit-box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.1);
-    background: #fff !important;
+    background: #inherit !important;
     transition: .5s !important;
     z-index: 922;
     -webkit-animation: 300ms running fadeInDown;
