--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ Tags: consulting, finance, corporate, business, consultant, multipurpose, techno
 }
 
 .header-menu ul li a:hover{
-    color:#0c9ed9;
+    color:#fff;
 }
 
 .header-menu ul li i {
