--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,8 +173,8 @@ Tags: consulting, finance, corporate, business, consultant, multipurpose, techno
 }
 
 .header-button a:hover{
-    color: #0c9ed9;
-    background: #fff;
+    color: #fff;
+    background: #012549;
 }
 
 .sticky {
