--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,10 @@ ul.sub-menu li a span {
 ul.sub-menu li:hover a span {
     background: rgba(255,255,255, 0.20);
 }
+
+.header-logo img {
+	padding: 12px 0;
+}
 /*---=================================
    <!--Hero Area Css-->
 ==================================---*/
